--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,34 @@
 		<pathelement location="${xenajar}"/>
 	</path>		
 	
+	<path id="ant.lib.path">
+		<fileset dir="antlib">
+			<include name="**/*.jar"/>
+		</fileset>
+		<fileset dir="ext">
+			<include name="**/*.jar"/>
+		</fileset>
+	</path>
+
+	<taskdef 
+	   name="jreleaseinfo" 
+	   classname="ch.oscg.jreleaseinfo.anttask.JReleaseInfoAntTask" >
+	   <classpath refid="ant.lib.path"/>
+	</taskdef>
+
+	<target name="updateversion" description="update the build number and version of the plugin">
+    	<jreleaseinfo 
+    		className="ReleaseInfo" 
+    		packageName="au.gov.naa.digipres.xena.plugin.office"
+    		targetDir="${basedir}/src" 
+    		project="office"
+    		withViewer="true" 
+    		buildNumFile="${basedir}/etc/buildnum.properties"
+    		buildNumProperty="buildnum"
+    		version="3.2.0">
+    	</jreleaseinfo>
+	</target>	
+
 	<target name="clean" depends="" description="--> Clear all output files">
 		<delete dir="${builddir}"/>
 		<delete dir="${distdir}"/>
@@ -33,7 +61,7 @@
 		<mkdir dir="${distdir}"/>
 	</target>
 	
-	<target name="compile" description="--> Compile the .java sources" depends="init">
+	<target name="compile" description="--> Compile the .java sources" depends="init, updateversion">
 		<javac 
 			srcdir="${srcdir}"
 	        destdir="${builddir}"
