Updated plugin-howto to fit in with the new way of loading plugins. Added missing and incorrect sections in how-to.

--- a/07_file_namer/orgx_plugin/build.xml
+++ b/07_file_namer/orgx_plugin/build.xml
@@ -1,30 +1,29 @@
-<project name="foo" basedir="." default="makejar">
-	<property name="pluginname" value="foo"/>
+<project name="orgx" basedir="." default="makejar">
+	<property name="pluginname" value="orgx"/>
 	
 	<property name="srcdir" value="src"/>
 	<property name="etcdir" value="etc"/>
 	<property name="builddir" value="bin"/>
         <property name="distdir" value="dist"/>
-	<property name="extdir" value="ext"/>
 
 	<!-- required project jar files -->
 	<property name="xenajarlocation" value="../../xena/xena.jar" />
 	
 	<path id="compile.path">
-		<fileset dir="ext">
-			<include name="**/*.jar"/>
-		</fileset>
 		<pathelement location="${xenajarlocation}"/>
 	</path>
 	
-	<target name="clean" depends="" description="--> Clear all output files">
-		<delete dir="${builddir}"/>
-		<delete dir="${distdir}"/>
+	<target name="init" description="Create output directories">
 		<mkdir dir="${builddir}"/>
 		<mkdir dir="${distdir}"/>
 	</target>
+
+	<target name="clean" depends="init" description="--> Clear all output files">
+		<delete dir="${builddir}"/>
+		<delete dir="${distdir}"/>
+	</target>
 	
-	<target name="compile" description="--> Compile the .java sources">
+	<target name="compile" description="--> Compile the .java sources" depends="init">
 		<javac srcdir="${srcdir}" destdir="${builddir}" debug="on" verbose="on" classpathref="compile.path"/>
 	</target>
 
