--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="ext/jdom.jar" />
-	<classpathentry kind="lib" path="ext/chardet.jar" />
-	<classpathentry kind="lib" path="ext/jhall.jar" />
+	<classpathentry kind="lib" path="ext/jdom.jar"/>
+	<classpathentry kind="lib" path="ext/chardet.jar"/>
+	<classpathentry kind="lib" path="ext/jhall.jar"/>
 	<classpathentry kind="lib" path="ext/xalan.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="ext/serializer.jar"/>
 	<classpathentry kind="lib" path="ext/looks-2.1.1.jar"/>
+	<classpathentry kind="lib" path="ext/commons-cli-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
