Almost a rewrite of the postscript plugin. Only the XenaView left to rewrite.

--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,7 @@
 	<property name="builddir" value="bin"/>
     <property name="distdir" value="dist"/>
 	<property name="extdir" value="ext"/>
+	<property name="xenaplugindir" value="../xena/dist/plugins"/>
 
 	<!-- required project jar files -->
 	<property name="xenajarlocation" value="../xena/dist/xena.jar" />
@@ -48,4 +49,12 @@
     		</jar>
 	</target>
 	
+	<target name="sendtoxena" description="--> Copy any built jars from the dist folder to the xena plugin folder." 
+	depends="makejar">
+    	<copy todir="${xenaplugindir}">
+    			<fileset dir="${distdir}">
+    				<include name="${pluginname}.jar"/>
+    			</fileset>
+		</copy>
+	</target>
 </project>
