--- a/name.properties
+++ b/name.properties
@@ -1,2 +1,1 @@
-name=au/gov/naa/digipres/xena/plugin/postscript
-version = 1.0.0
+classname=au.gov.naa.digipres.xena.plugin.postscript.PostscriptPlugin
