--- a/toastscript.properties
+++ b/toastscript.properties
@@ -1,11 +1,11 @@
 #ToastScript Properties
-#Wed Feb 28 11:54:11 EST 2007
-frame.y=13
+#Mon Dec 22 09:50:55 EST 2008
+frame.y=60
 page.orientation=0
-frame.x=0
-frame.height=998
-file=C\:\\DOCUME~1\\eri\\LOCALS~1\\Temp\\postScript59091.ps
-frame.width=1288
-page.width=612.0
-page.scale=2.5
-page.height=792.0
+frame.x=399
+frame.height=768
+file=/home/matt/blah.ps
+frame.width=848
+page.width=576.0
+page.scale=1.0
+page.height=720.0
