Added Gamma EXIF tag

--- a/src/au/gov/naa/digipres/xena/plugin/image/tiff/tags.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/image/tiff/tags.properties
@@ -160,6 +160,7 @@ Sharpness.ID = 41994
 DeviceSettingDescription.ID = 41995
 SubjectDistanceRange.ID = 41996
 ImageUniqueID.ID = 42016
+Gamma.ID = 42240
 
 # GPS Tags
 GPSVersionID.ID = 0
